<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculate"
            android:icon="?android:attr/listChoiceIndicatorMultiple"
            android:title="@string/menu_calculate" />
        <item
            android:id="@+id/nav_web"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_music_player"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_music_player" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="?android:attr/textSelectHandle"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_photo" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_voice" />
    </group>
</menu>